--- a/kaygee/src/styles/App.css
+++ b/kaygee/src/styles/App.css
@@ -1,13 +1,9 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
 }
 
-body { 
-  font-family: system-ui, Roboto, sans-serif; 
-  margin: 0; 
-}
+
 
 .nav { 
   display:flex; 
